# beat-the-culprit

./: README.md  azure_recognisation.py  configure_clients.py  face_detection_recognisation.py  pyproject.toml
